--- a/Public/index.html
+++ b/Public/index.html
@@ -121,7 +121,7 @@
 									<h2>Hello</h2> 
 										<h1>Welcome to the LIFESAVER</h1>
 				   				
-										<p><a class="btn btn-primary btn-demo" href="#"></i>  Register Donar</a> <a class="btn btn-primary btn-learn">Register Patient</a></p>
+										<p><a class="btn btn-primary btn-demo" href="/donor.html"></i>  Register Donar</a> <a class="btn btn-primary btn-learn">Register Patient</a></p>
 				   				</div>
 				   			</div>
 				   		</div>
