--- a/Public/index.html
+++ b/Public/index.html
@@ -164,7 +164,7 @@
 				   				<div class="slider-text-inner text-center">
 				   					<!-- <h2>Come &amp; enjoy the unforgetable nights</h2> -->
 				   					<h1>Everything in your hands</h1>
-										<p><a class="btn btn-primary btn-demo" href="#"></i> Register Donar</a> <a class="btn btn-primary btn-learn">Register Patient</a></p>
+										<p><a class="btn btn-primary btn-demo" href="/donor.html"></i> Register Donar</a> <a class="btn btn-primary btn-learn">Register Patient</a></p>
 				   				</div>
 				   			</div>
 				   		</div>
@@ -177,7 +177,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-12 search-wrap">
-						<form method="post" class="colorlib-form">
+						<form method="post" class="colorlib-form" >
 		              	<div class="row">
 		                <!-- <div class="col-md-3">
 		                  <div class="form-group">
