--- a/Public/patient.html
+++ b/Public/patient.html
@@ -113,13 +113,21 @@
 				<label class="form-check-label" for="exampleRadios2">
 				  liver
 				</label>
-			  </div>
-			  <div class="form-check">
-				<input class="form-check-input" type="radio" name="organ" id="exampleRadios2" value="lungs">
-				<label class="form-check-label" for="exampleRadios2">
-				  lungs
-				</label>
-			  </div>
+				</div>
+				
+				<div class="hide active">
+					<div class="kidney">
+					<h4>Kidney Organ Info</h4>
+					<div class="form-group">
+						<label for="bp">Blood pressure</label>
+						<input type="text" class="form-control" id="bp" aria-describedby="emailHelp" placeholder="Blood Group" name="bp">
+						</div>
+						<div class="form-group">
+								<label for="bp">Blood pressure</label>
+								<input type="text" class="form-control" id="bp" aria-describedby="emailHelp" placeholder="Blood Group" name="bp">
+								</div>
+					</div>	
+				</div>
 
 			<button type="submit" class="btn btn-primary">Submit</button>
 		  </form>
@@ -157,6 +165,18 @@
 				data: $('#patient_form').serialize(),
 				success: function(data){
 					console.log(data)
+					$.ajax({
+						url: "/update_severity",
+						method: "POST",
+						data: data,
+						success: function(response){
+							console.log(response)
+							alert("patient data added successfully")
+						},
+						error: function(e){
+							console.log(e)
+						}
+					})
 				},
 				error: function(e){
 					console.log(e)
