--- a/Public/rooms-suites.html
+++ b/Public/rooms-suites.html
@@ -9,6 +9,12 @@
 	<meta name="keywords" content="" />
 	<meta name="author" content="" />
 
+
+
+
+
+	
+
   <!-- Facebook and Twitter integration -->
 	<meta property="og:title" content=""/>
 	<meta property="og:image" content=""/>
@@ -58,10 +64,10 @@
 	</head>
 	<body>
 		
-	<div class="colorlib-loader"></div>
-
+	<!-- <div class="colorlib-loader"></div> -->
+<!-- 
 	<div id="page">
-		<nav class="colorlib-nav" role="navigation">
+<!--		<nav class="colorlib-nav" role="navigation">
 			<div class="top">
 				<div class="container">
 					<div class="row">
@@ -78,8 +84,8 @@
 							</ul>
 						</div>
 					</div>
-				</div>
-			</div>
+				</div>-->
+			<!-- </div> 
 			<div class="top-menu">
 				<div class="container">
 					<div class="row">
@@ -108,7 +114,7 @@
 					</div>
 				</div>
 			</div>
-		</nav>
+		</nav>	 --> 
 		<aside id="colorlib-hero">
 			<div class="flexslider">
 				<ul class="slides">
