--- a/Public/index.html
+++ b/Public/index.html
@@ -69,7 +69,7 @@
 							<p class="site">www.lifesaver.com</p>
 						</div>
 						<div class="col-xs-8 text-right">
-							<p class="num">Call: +01-123-456</p>
+							<!-- <p class="num">Call: +01-123-456</p> -->
 							<ul class="colorlib-social">
 								<li><a href="#"><i class="icon-twitter"></i></a></li>
 								<li><a href="#"><i class="icon-facebook"></i></a></li>
@@ -103,8 +103,8 @@
 								<li><a href="aminities.html">Aminities</a></li>
 								<li><a href="blog.html">Blog</a></li>
 								<li><a href="about.html">About</a></li>
-								<li><a href="contact.html">Contact</a></li> -->
-							<!-- </ul> -->
+								<li><a href="contact.html">Contact</a></li> 
+							 </ul> -->
 						</div>
 					</div>
 				</div>
@@ -300,7 +300,7 @@
 								<i class="flaticon-reception"></i>
 							</span>
 							<h3>24/7 Front Desk</h3>
-							<p>Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden flows by their place and supplies</p>
+							<p>Available on the go services 24X7 to avoid any emergency crisis.</p>
 						</div>
 					</div>
 					<div class="col-md-3 animate-box text-center">
@@ -308,8 +308,8 @@
 							<span class="icon">
 								<i class="flaticon-herbs"></i>
 							</span>
-							<h3>Spa Suites</h3>
-							<p>Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden flows by their place and supplies</p>
+							<h3>More accurate System </h3>
+							<p>Smartly designed algorithm system to increase the accuracy and efficiency of the Web APP </p>
 						</div>
 					</div>
 					<div class="col-md-3 animate-box text-center">
@@ -319,8 +319,10 @@
 							</span>
 
 							
-							<h3>Transfer Services</h3>
-							<p>Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden flows by their place and supplies</p>
+							<h3>Speedy Service</h3>
+							<p>We ensure fast and responsive services to the user because your life is what matters!!!</p>
+
+							
 						</div>
 					</div>
 					<div class="col-md-3 animate-box text-center">
@@ -328,8 +330,8 @@
 							<span class="icon">
 								<i class="flaticon-cheers"></i>
 							</span>
-							<h3>Restaurant &amp; Bar</h3>
-							<p>Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden flows by their place and supplies</p>
+							<h3> Health &amp; Wealth </h3>
+							<p> Without health there is no happiness, no peace and no success and that's where Lifesaver plays a crucial role </p>
 						</div>
 					</div>
 				</div>
